--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\LazyWebBot.Contracts\packages.config" />
   <repository path="..\LazyWebBot.Importer\packages.config" />
+  <repository path="..\LazyWebBot.Parser\packages.config" />
+  <repository path="..\LazyWebBot.Playground\packages.config" />
 </repositories>
