--- a/LazyWebBot.Playground/packages.config
+++ b/LazyWebBot.Playground/packages.config
@@ -4,4 +4,5 @@
   <package id="log4net" version="1.2.10" targetFramework="net40" />
   <package id="NServiceBus" version="3.3.5" targetFramework="net40" />
   <package id="NServiceBus.Interfaces" version="3.3.5" targetFramework="net40" />
+  <package id="RavenDB.Client" version="2.0.2330" targetFramework="net45" />
 </packages>
