--- a/LazyWebBot.Importer/packages.config
+++ b/LazyWebBot.Importer/packages.config
@@ -1,6 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Hammock" version="1.3.1" targetFramework="net40" />
+  <package id="log4net" version="1.2.10" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net40" />
+  <package id="NServiceBus" version="3.3.5" targetFramework="net45" />
+  <package id="NServiceBus.Interfaces" version="3.3.5" targetFramework="net45" />
+  <package id="RavenDB.Client" version="2.0.2330" targetFramework="net45" />
   <package id="TweetSharp" version="2.3.0" targetFramework="net40" />
 </packages>
