Added in an empty / basic replier handler

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -4,4 +4,5 @@
   <repository path="..\LazyWebBot.Importer\packages.config" />
   <repository path="..\LazyWebBot.Parser\packages.config" />
   <repository path="..\LazyWebBot.Playground\packages.config" />
+  <repository path="..\LazyWebBot.Replier\packages.config" />
 </repositories>
