--- a/LazyWebBot.Parser/app.config
+++ b/LazyWebBot.Parser/app.config
@@ -1,7 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
+    <section name="MsmqTransportConfig" type="NServiceBus.Config.MsmqTransportConfig, NServiceBus.Core"/>
     <section name="MessageForwardingInCaseOfFaultConfig" type="NServiceBus.Config.MessageForwardingInCaseOfFaultConfig, NServiceBus.Core" />
+    <section name="UnicastBusConfig" type="NServiceBus.Config.UnicastBusConfig, NServiceBus.Core" />
   </configSections>
-  <MessageForwardingInCaseOfFaultConfig ErrorQueue="error" />
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
+  </startup>
+  <MsmqTransportConfig NumberOfWorkerThreads="1" MaxRetries="5"  />
+  <MessageForwardingInCaseOfFaultConfig ErrorQueue="error@localhost" />
+  <UnicastBusConfig>
+    <MessageEndpointMappings>
+      <add Messages="LazyWebBot.Contracts.Replier" Endpoint="LazyWebBot.Replier@localhost" />
+    </MessageEndpointMappings>
+  </UnicastBusConfig>
 </configuration>
