Hooked the parser up so that it does the bulk of the sending Added in an installer for the parser

--- a/LazyWebBot.Parser/LazyWebBot.Parser.csproj
+++ b/LazyWebBot.Parser/LazyWebBot.Parser.csproj
@@ -49,6 +49,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EndpointConfig.cs" />
+    <Compile Include="FakeTextParser.cs" />
+    <Compile Include="ParserInstaller.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StatusParserHandler.cs" />
   </ItemGroup>
@@ -64,6 +66,10 @@
     <ProjectReference Include="..\LazyWebBot.Contracts\LazyWebBot.Contracts.csproj">
       <Project>{C87C60A7-07DE-4B4C-A393-1853077F4E62}</Project>
       <Name>LazyWebBot.Contracts</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\LazyWebBot.Services\LazyWebBot.Services.csproj">
+      <Project>{3F68D741-F707-4254-8303-18FE707D29C8}</Project>
+      <Name>LazyWebBot.Services</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
