--- a/LazyWebBot.Services/LazyWebBot.Services.csproj
+++ b/LazyWebBot.Services/LazyWebBot.Services.csproj
@@ -34,6 +34,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Parser\ITextParser.cs" />
     <Compile Include="Search\ISearchService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Search\SearchService.cs" />
