Added in Wolfram and OpenCalais search services

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -6,4 +6,5 @@
   <repository path="..\LazyWebBot.Parser\packages.config" />
   <repository path="..\LazyWebBot.Playground\packages.config" />
   <repository path="..\LazyWebBot.Replier\packages.config" />
+  <repository path="..\LazyWebBot.Services\packages.config" />
 </repositories>
