--- a/LazyWebBot.Services/LazyWebBot.Services.csproj
+++ b/LazyWebBot.Services/LazyWebBot.Services.csproj
@@ -11,6 +11,8 @@
     <AssemblyName>LazyWebBot.Services</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
+    <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -30,16 +32,39 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="OpenCalais">
+      <HintPath>..\lib\OpenCalais.dll</HintPath>
+    </Reference>
+    <Reference Include="OpenCalais.XmlSerializers">
+      <HintPath>..\lib\OpenCalais.XmlSerializers.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web.Services" />
+    <Reference Include="System.Xml" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="WolframAPI">
+      <HintPath>..\packages\WolframAPI.1.2\lib\WolframAPI.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Exceptions\WolframAlphaException.cs" />
+    <Compile Include="Parser\Calais\IOpenCalaisService.cs" />
+    <Compile Include="Exceptions\OpenCalaisException.cs" />
+    <Compile Include="Parser\Calais\OpenCalaisService.cs" />
     <Compile Include="Parser\ITextParser.cs" />
+    <Compile Include="Parser\Wolfram\IWolframAlphaService.cs" />
+    <Compile Include="Parser\Wolfram\WolframAlphaService.cs" />
     <Compile Include="Search\ISearchService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Search\SearchService.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+    <None Include="README.textile" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
