--- a/LazyWebBot.Parser/LazyWebBot.Parser.csproj
+++ b/LazyWebBot.Parser/LazyWebBot.Parser.csproj
@@ -45,11 +45,11 @@
       <HintPath>..\packages\NServiceBus.Host.3.3.5\lib\net40\NServiceBus.Host.exe</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EndpointConfig.cs" />
-    <Compile Include="FakeTextParser.cs" />
     <Compile Include="ParserInstaller.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StatusParserHandler.cs" />
