--- a/LazyWebBot.Playground/packages.config
+++ b/LazyWebBot.Playground/packages.config
@@ -5,4 +5,5 @@
   <package id="NServiceBus" version="3.3.5" targetFramework="net40" />
   <package id="NServiceBus.Interfaces" version="3.3.5" targetFramework="net40" />
   <package id="RavenDB.Client" version="2.0.2330" targetFramework="net45" />
+  <package id="WolframAPI" version="1.2" targetFramework="net45" />
 </packages>
