--- a/LazyWebBot.Services/LazyWebBot.Services.csproj
+++ b/LazyWebBot.Services/LazyWebBot.Services.csproj
@@ -40,6 +40,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Web.Services" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
@@ -53,6 +54,7 @@
     <Compile Include="Exceptions\OpenCalaisException.cs" />
     <Compile Include="Parser\Calais\OpenCalaisService.cs" />
     <Compile Include="Parser\ITextParser.cs" />
+    <Compile Include="Parser\TextParser.cs" />
     <Compile Include="Parser\Wolfram\IWolframAlphaService.cs" />
     <Compile Include="Parser\Wolfram\WolframAlphaService.cs" />
     <Compile Include="Search\ISearchService.cs" />
